@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3280 utf-8
+personal_ws-1.1 en 3281 utf-8
 AAC
 AAS
 ABI
@@ -3148,6 +3148,7 @@ usbconfig
 usbfs
 usbhid
 usbif
+usbinfo
 usbmisc
 usbups
 usbus
