@@ -39,6 +39,17 @@ https://github.com/networkupstools/nut/milestone/10
 
  - (expected) Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0
 
+ - nut-usbinfo.pl, nut-scanner and libnutscan:
+   * USB VendorID:ProductID support list files generated by the script for
+     different OS frameworks now include a comment with other possibly
+     compatible driver names, where the respective file format allows for
+     comments.
+   * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
+     for ability to suggest a comment with other possibly compatible driver
+     names in configuration snippets generated by `nut-scanner`; practical
+     support implemented for USB connected drivers. Library API version
+     bumped to 2.3.0 accordingly.
+
 
 Release notes for NUT 2.8.1 - what's new since 2.8.0
 ----------------------------------------------------
